--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="/img/logo/logo-Mydash.png"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Elstar - React Tailwind Admin" />
-        <title>Xcoop - Servicios financieros</title>
+        <title>MyDash - Tu dashboard, facil</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
